# aicm

./: .gitignore  .npmrc  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.ja.md  README.md  ai-context.yaml  aicm-config.yml  biome.json  package.json  test-split-config.yaml  tsconfig.json  vitest.config.ts
.clinerules/: 01_project-overview.md  03_architecture.md  04_dependencies.md  06_roadmap.md  06_rust-rule.md  07_references.md
.cursor/rules/: 01_project-overview.mdc  02_project-security.mdc  03_architecture.mdc  03_project-architecture.mdc  04_dependencies.mdc  04_development-setup.mdc  05_development-rules.mdc  (+3 more)
.github/: copilot-instructions.md
.husky/: pre-commit  pre-push
ai-context/: 01_project-overview.md  03_dependencies.md  03_project-architecture.md  04_development-rules.md  05_development-rules.md  05_development-setup.md  06_roadmap.md  07_references.md
ai-works/: 2025-01-07-agent-specific-output-mode.md  2025-01-07-github-cline-agents-correct-implementation.md  2025-01-07-github-cline-agents-implementation.md  2025-01-08-github-copilot-agent-implementation.md  2025-01-16-kiro-agent-support.md  2025-01-17-fix-uninlined-format-args.md  2025-01-24-fix-aicm-init-template-yaml-validation.md  2025-06-08-ai-context-docs-fix.md  2025-06-08-claude-agent-implementation.md  2025-06-08-github-copilot-naming-fix.md  2025-06-09-cursor-split-config-implementation.md  2025-06-10-codex-agent-implementation.md  2025-06-10-external-config-file-support.md  2025-06-10-github-apply-to-support.md  2025-06-10-optional-filename-headers.md  2025-06-11-base-docs-dir-validation.md  2025-06-11-init-command-simplification.md  2025-06-12-cargo-publish-exclude.md  2025-06-12-cursor-mdc-frontmatter-fix.md  2025-06-12-fix-claude-test-file-interference.md  2025-06-12-readme-rewrite-for-opensource.md  2025-06-12-translate-rust-comments.md  2025-06-13-add-version-flag.md  2025-06-13-agent-file-cleanup.md  2025-06-13-agent-specific-base-docs-dir.md  2025-06-13-improve-init-template-comments.md  2025-06-18-additional-files-support.md  2025-06-18-claude-import-files.md  2025-06-25-add-gemini-cli-support.md  cursor-implementation.md  simplification-plan.md
docs/: blog-post.md  blog.md  concept.md  context_spec.md  design_doc.md  guide.md  homebrew-publishing.md  requirements.md
src/: cleanup.rs  lib.rs  main.rs
tests/: integration_test.rs
(+53 files in other folders)
