[package]
name = "aicm"
version = "0.4.0"
edition = "2021"
authors = ["Morooka Akira <morooka.akira@gmail.com>"]
description = "AI Code Agent Context Management CLI tool for generating context files for multiple AI coding agents"
license = "MIT"
repository = "https://github.com/morooka-akira/aicm"
keywords = ["ai", "context", "cli", "agents", "tools"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "ai-works/",
    "ai-context/", 
    "docs/",
    "ai-context.yaml"
]

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive"] }

# YAML parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# File system operations
tokio = { version = "1.0", features = ["full"] }

# Pattern matching for glob patterns
glob = "0.3"

# Path manipulation
path-clean = "1.0"
pathdiff = "0.2"

# Async traits
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[[bin]]
name = "aicm"
path = "src/main.rs"

[lib]
name = "aicm"
path = "src/lib.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"